--- a/global.mixins.15.scss
+++ b/global.mixins.15.scss
@@ -409,3 +409,170 @@ $grid_breakpoints: get_theme(grid-breakpoints, bootstrap);
     }
   }
 }
+
+
+@mixin base_button_styling() {
+    @include button_styling; // NB: includes focus styling
+    display: inline-block;
+    font-weight: 400;
+    color: #212529;
+    text-align: center;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: .25rem;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+    text-decoration: none;
+    cursor: pointer;
+
+    &[disabled] {
+        opacity: .5;
+        cursor: not-allowed;
+    }
+
+    &:hover {
+        text-decoration: none;
+    }
+}
+
+@mixin primary_button_styling() {
+    background-color: $theme_primary_btn_bg;
+    color: $theme_primary_btn_fg;
+    border: $theme_primary_btn_border;
+    border-radius: $theme_primary_btn_border_radius;
+    font-size: $theme_primary_btn_font_size;
+    font-weight: $theme_primary_btn_font_weight;
+    padding: $theme_primary_btn_padding;
+    
+    &:hover {
+        background-color: $theme_primary_btn_hover_bg;
+        color: $theme_primary_btn_hover_fg;
+        border: $theme_primary_btn_hover_border;
+    }
+
+    &:active {
+        background-color: $theme_primary_btn_active_bg;
+        color: $theme_primary_btn_active_fg;
+        border: $theme_primary_btn_active_border;
+    }
+
+    &:focus {
+        outline: 0;
+        box-shadow: 0 0 0 0.2rem rgba($theme_primary_btn_bg, .5);
+    }
+}
+
+@mixin secondary_button_styling() {
+    background-color: $theme_secondary_btn_bg;
+    color: $theme_secondary_btn_fg;
+    border: $theme_secondary_btn_border;
+    border-radius: $theme_secondary_btn_border_radius;
+    font-size: $theme_secondary_btn_font_size;
+    font-weight: $theme_secondary_btn_font_weight;
+    padding: $theme_secondary_btn_padding;
+
+    &:hover {
+        background-color: $theme_secondary_btn_hover_bg;
+        color: $theme_secondary_btn_hover_fg;
+        border: $theme_secondary_btn_hover_border;
+    }
+
+    &:active {
+        background-color: $theme_secondary_btn_active_bg;
+        color: $theme_secondary_btn_active_fg;
+        border: $theme_secondary_btn_active_border;
+    }
+
+    &:focus {
+        outline: 0;
+        box-shadow: 0 0 0 0.2rem rgba($theme_secondary_btn_bg, .5);
+    }
+}
+
+
+
+// breakpoints used by data-clamp-xs / -sm / -md / -lg / -xl variants
+$data_clamp_breakpoints: (
+  "xs": 575px,
+  "sm": 576px,
+  "md": 768px,
+  "lg": 992px,
+  "xl": 1200px
+);
+
+// max value supported by [data-clamp]
+$data_clamp_max: 6;
+
+// enforces single line clamping
+@mixin singleLineClamping(){
+    white-space: nowrap;
+    display: block;
+}
+
+// enforces multiple line clamping
+@mixin multipleLineClamping($attribute, $maxLines){
+
+  [#{$attribute}="#{$maxLines}"] 
+  {
+    line-clamp: $maxLines;
+    -webkit-line-clamp: $maxLines;
+  }
+}
+
+// restores line wrapping (used when overriding line clamping at various breakpoints)
+@mixin restoreLineWrapping(){
+    display: block;
+    -webkit-box-orient: inline-axis;
+    text-overflow: clip;
+    overflow: visible;
+	white-space: normal;
+	
+	&[data-clamp-display="inline-block"] {
+		display: inline-block;		
+	}
+
+	&[data-clamp-display="inline-flex"] {
+		display: inline-flex;		
+	}
+
+	&[data-clamp-display="flex"] {
+		display: flex;		
+	}
+}
+
+// initial (xs) breakpoint uses a max-width @media query
+// (everything else uses min-width)
+@function getBreakpointType($breakpoint) {
+  @if ($breakpoint == 'xs') {
+    @return max-width;
+  }
+  
+  @return min-width;
+}
+
+// define line clamping for a specific breakpoint
+@mixin lineClampingBreakpoint($breakpoint, $width) {
+  $breakpoint_type: getBreakpointType($breakpoint);
+
+  @media only screen and (#{$breakpoint_type}: $width) {
+  
+  	[data-clamp-#{$breakpoint}="0"] {
+  		@include restoreLineWrapping();
+  	}
+
+  	[data-clamp-#{$breakpoint}="1"] {
+  		@include singleLineClamping();
+  	}
+  
+  	@for $i from 2 through $data_clamp_max {
+  	  @include multipleLineClamping("data-clamp-#{$breakpoint}", $i);
+  	}
+  }
+}
