--- a/tile.scss
+++ b/tile.scss
@@ -5,18 +5,13 @@
     display: inline-block;
     background: #fff;
     border: 1px solid #E6E9ED;
-    -webkit-column-break-inside: avoid;
-    -moz-column-break-inside: avoid;
-    column-break-inside: avoid;
     opacity: 1;
-    transition: all .2s ease;
 	margin-bottom: 10px;
 	position: relative;
+	box-shadow: 0 0 5px rgba(0,0,0,.1);
 	
-	>header{
-		border-bottom: 2px solid #E6E9ED;
-		padding: 1px 5px 6px;
-		margin-bottom: 10px;
+	>h3{
+		color: #666;
 	}
 	
 	>article{
