--- a/auto-list.scss
+++ b/auto-list.scss
@@ -11,8 +11,34 @@
 		}
 	}
 	
+	
+	.table th {
+		border-top: none;
+	}
+	
 	th.sorted-desc .fa-caret-down, th.sorted-asc .fa-caret-up{
 		color: green;
 	}
 	
+	.bulk-actions {
+		position: fixed;
+		bottom: 20px;
+		left: 20px;
+		width: 300px;
+		background: white;
+		padding: 10px;
+		text-align: center;
+		box-shadow: 0 0 8px rgba(0,0,0,.3);
+		
+		> p {
+			padding: 10px 0;
+		}
+	}
+	
+	.btn-danger {
+		border-radius: 2rem;
+		font-size: 1rem;
+		font-weight: bold;
+		padding: 0.75rem 2rem;
+	}
 }
