Sticky RTE menu is now tidier

--- a/auto-form.scss
+++ b/auto-form.scss
@@ -18,6 +18,10 @@
 		z-index: 999;
 	}
 	
+	.rich-editor .rte-toolbar {
+		top: 88px;
+	}
+	
 	.btn-danger {
 		border-radius: 2rem;
 		font-size: 1rem;
