Final touches on integration of icon selector into FileSelector.js

--- a/file-selector.scss
+++ b/file-selector.scss
@@ -5,7 +5,17 @@
 		}
 	}
 
+	.image {
+		i {
+			font-size: 32px;
+		}
+	}
+
 	.delete-file-btn{
 		margin-left: 10px;
+	}
+
+	.file-selector-btn-group {
+		float: left;
 	}
 }
