Latest set of updates on the RTE

--- a/RichEditor/RichEditor.scss
+++ b/RichEditor/RichEditor.scss
@@ -1,11 +1,16 @@
 .rich-editor{
-	border: 1px solid lightgrey;
+	border: 1px solid #e5e5e5;
 	border-radius: 2px;
-
+	
+	&.no-toolbar {
+		border-radius: 0.4375rem 0.4375rem 0.4375rem 0.4375rem;
+		padding: 0.5625rem 1rem 0.5625rem 1rem;
+	}
+	
 	> .rte-toolbar{
 		background: #f2f2f2;
 		position: sticky;
-		z-index: 1000;
+		z-index: 998;
 		top: 0px;
 		padding: 5px;
 		
@@ -32,9 +37,54 @@
 			background: white;
 			padding: 5px;
 		}
+		
+		.highlighted-node-bar{
+			&.highlight-locked{
+				color: black;
+			}
+			
+			&.highlight-open{
+				color: lightgrey;
+			}
+			
+			.fa-angle-left{
+				margin: 0px 10px;
+			}
+		}
+	}
+	
+	.context-menu{
+		background: white;
+		color: black;
+		border: 1px solid lightgrey;
+		padding: 10px;
+		position: fixed;
+		z-index: 1;
+		
+		.context-btn{
+			display: block;
+			background: none;
+			border: none;
+			margin-bottom: 10px;
+			
+			i{
+				color: lightgrey;
+				margin-right: 5px;
+			}
+			
+			&:hover{
+				cursor: pointer;
+			}
+
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
 	}
 	
 	> .rte-content{
 		min-height: 200px;
+		overflow: hidden;
+		transform: scaleX(1); /* position: fixed is relative to transforms too, so we can use this to contain them */
 	}
 }
