Admin panel css class changed

--- a/toggle.scss
+++ b/toggle.scss
@@ -1,4 +1,4 @@
-html:not(.admin-open) .custom-control {
+html:not(.admin) .custom-control {
 
     &.custom-checkbox.custom-checkbox-slider {
         padding-left: 6.75rem;
