--- a/global.mq.16.scss
+++ b/global.mq.16.scss
@@ -82,12 +82,42 @@ $ss_mobileLarge: map-get($ss_mobile, large);
   }
 }
 
+@mixin mq_mobilePortrait {
+  $to: map-get($ss_mobileLarge, to);
+  @media (max-width: #{$to}) and (pointer: coarse) and (orientation: portrait) {
+    @content;
+  }
+}
+
+@mixin mq_mobileLandscape {
+  $to: map-get($ss_mobileLarge, to);
+  @media (max-height: #{$to}) and (pointer: coarse) and (orientation: landscape) {
+    @content;
+  }
+}
+
 // mobile MQ (small)
 @mixin mq_mobileSmall {
   $from: map-get($ss_mobileSmall, from);
   $to: map-get($ss_mobileSmall, to);
   @media (min-width: #{$from}) and (max-width: #{$to}) and (pointer: coarse) and (orientation: portrait),
          (min-height: #{$from}) and (max-height: #{$to}) and (pointer: coarse) and (orientation: landscape) {
+    @content;
+  }
+}
+
+@mixin mq_mobileSmallPortrait {
+  $from: map-get($ss_mobileSmall, from);
+  $to: map-get($ss_mobileSmall, to);
+  @media (min-width: #{$from}) and (max-width: #{$to}) and (pointer: coarse) and (orientation: portrait) {
+    @content;
+  }
+}
+
+@mixin mq_mobileSmallLandscape {
+  $from: map-get($ss_mobileSmall, from);
+  $to: map-get($ss_mobileSmall, to);
+  @media (min-height: #{$from}) and (max-height: #{$to}) and (pointer: coarse) and (orientation: landscape) {
     @content;
   }
 }
@@ -102,12 +132,44 @@ $ss_mobileLarge: map-get($ss_mobile, large);
   }
 }
 
+@mixin mq_mobileMediumPortrait {
+  $from: map-get($ss_mobileMedium, from);
+  $to: map-get($ss_mobileMedium, to);
+  @media (min-width: #{$from}) and (max-width: #{$to}) and (pointer: coarse) and (orientation: portrait) {
+    @content;
+  }
+}
+
+@mixin mq_mobileMediumLandscape {
+  $from: map-get($ss_mobileMedium, from);
+  $to: map-get($ss_mobileMedium, to);
+  @media (min-height: #{$from}) and (max-height: #{$to}) and (pointer: coarse) and (orientation: landscape) {
+    @content;
+  }
+}
+
 // mobile MQ (large)
 @mixin mq_mobileLarge {
   $from: map-get($ss_mobileLarge, from);
   $to: map-get($ss_mobileLarge, to);
   @media (min-width: #{$from}) and (max-width: #{$to}) and (pointer: coarse) and (orientation: portrait),
          (min-height: #{$from}) and (max-height: #{$to}) and (pointer: coarse) and (orientation: landscape) {
+    @content;
+  }
+}
+
+@mixin mq_mobileLargePortrait {
+  $from: map-get($ss_mobileLarge, from);
+  $to: map-get($ss_mobileLarge, to);
+  @media (min-width: #{$from}) and (max-width: #{$to}) and (pointer: coarse) and (orientation: portrait) {
+    @content;
+  }
+}
+
+@mixin mq_mobileLargeLandscape {
+  $from: map-get($ss_mobileLarge, from);
+  $to: map-get($ss_mobileLarge, to);
+  @media (min-height: #{$from}) and (max-height: #{$to}) and (pointer: coarse) and (orientation: landscape) {
     @content;
   }
 }
@@ -151,12 +213,70 @@ $ss_iPad12_9: map-get($ss_tablet, iPad12_9);
   }
 }
 
+@mixin mq_iPadPortrait {
+  $widthMini: map-get($ss_iPadMini, width);
+  $heightMini: map-get($ss_iPadMini, height);
+  $width10_2: map-get($ss_iPad10_2, width);
+  $height10_2: map-get($ss_iPad10_2, height);
+  $width10_5: map-get($ss_iPad10_5, width);
+  $height10_5: map-get($ss_iPad10_5, height);
+  $width11: map-get($ss_iPad11, width);
+  $height11: map-get($ss_iPad11, height);
+  $width12_9: map-get($ss_iPad12_9, width);
+  $height12_9: map-get($ss_iPad12_9, height);
+
+  @media (device-width: #{$heightMini}) and (device-height: #{$widthMini}) and (orientation: portrait),
+         (device-width: #{$height10_2}) and (device-height: #{$width10_2}) and (orientation: portrait),
+         (device-width: #{$height10_5}) and (device-height: #{$width10_5}) and (orientation: portrait),
+         (device-width: #{$height11}) and (device-height: #{$width11}) and (orientation: portrait),
+         (device-width: #{$height12_9}) and (device-height: #{$width12_9}) and (orientation: portrait) {
+    @content;
+  }
+}
+
+@mixin mq_iPadLandscape {
+  $widthMini: map-get($ss_iPadMini, width);
+  $heightMini: map-get($ss_iPadMini, height);
+  $width10_2: map-get($ss_iPad10_2, width);
+  $height10_2: map-get($ss_iPad10_2, height);
+  $width10_5: map-get($ss_iPad10_5, width);
+  $height10_5: map-get($ss_iPad10_5, height);
+  $width11: map-get($ss_iPad11, width);
+  $height11: map-get($ss_iPad11, height);
+  $width12_9: map-get($ss_iPad12_9, width);
+  $height12_9: map-get($ss_iPad12_9, height);
+
+  @media (device-width: #{$widthMini}) and (device-height: #{$heightMini}) and (orientation: landscape),
+         (device-width: #{$width10_2}) and (device-height: #{$height10_2}) and (orientation: landscape),
+         (device-width: #{$width10_5}) and (device-height: #{$height10_5}) and (orientation: landscape),
+         (device-width: #{$width11}) and (device-height: #{$height11}) and (orientation: landscape),
+         (device-width: #{$width12_9}) and (device-height: #{$height12_9}) and (orientation: landscape) {
+    @content;
+  }
+}
+
 // iPad MQ (mini)
 @mixin mq_iPadMini {
   $width: map-get($ss_iPadMini, width);
   $height: map-get($ss_iPadMini, height);
   @media (device-width: #{$height}) and (device-height: #{$width}) and (orientation: portrait),
          (device-width: #{$width}) and (device-height: #{$height}) and (orientation: landscape) {
+    @content;
+  }
+}
+
+@mixin mq_iPadMiniPortrait {
+  $width: map-get($ss_iPadMini, width);
+  $height: map-get($ss_iPadMini, height);
+  @media (device-width: #{$height}) and (device-height: #{$width}) and (orientation: portrait) {
+    @content;
+  }
+}
+
+@mixin mq_iPadMiniLandscape {
+  $width: map-get($ss_iPadMini, width);
+  $height: map-get($ss_iPadMini, height);
+  @media (device-width: #{$width}) and (device-height: #{$height}) and (orientation: landscape) {
     @content;
   }
 }
@@ -171,12 +291,44 @@ $ss_iPad12_9: map-get($ss_tablet, iPad12_9);
   }
 }
 
+@mixin mq_iPad10_2Portrait {
+  $width: map-get($ss_iPad10_2, width);
+  $height: map-get($ss_iPad10_2, height);
+  @media (device-width: #{$height}) and (device-height: #{$width}) and (orientation: portrait) {
+    @content;
+  }
+}
+
+@mixin mq_iPad10_2Landscape {
+  $width: map-get($ss_iPad10_2, width);
+  $height: map-get($ss_iPad10_2, height);
+  @media (device-width: #{$width}) and (device-height: #{$height}) and (orientation: landscape) {
+    @content;
+  }
+}
+
 // iPad MQ (10.5")
 @mixin mq_iPad10_5 {
   $width: map-get($ss_iPad10_5, width);
   $height: map-get($ss_iPad10_5, height);
   @media (device-width: #{$height}) and (device-height: #{$width}) and (orientation: portrait),
          (device-width: #{$width}) and (device-height: #{$height}) and (orientation: landscape) {
+    @content;
+  }
+}
+
+@mixin mq_iPad10_5Portrait {
+  $width: map-get($ss_iPad10_5, width);
+  $height: map-get($ss_iPad10_5, height);
+  @media (device-width: #{$height}) and (device-height: #{$width}) and (orientation: portrait) {
+    @content;
+  }
+}
+
+@mixin mq_iPad10_5Landscape {
+  $width: map-get($ss_iPad10_5, width);
+  $height: map-get($ss_iPad10_5, height);
+  @media (device-width: #{$width}) and (device-height: #{$height}) and (orientation: landscape) {
     @content;
   }
 }
@@ -191,12 +343,44 @@ $ss_iPad12_9: map-get($ss_tablet, iPad12_9);
   }
 }
 
+@mixin mq_iPad11Portrait {
+  $width: map-get($ss_iPad11, width);
+  $height: map-get($ss_iPad11, height);
+  @media (device-width: #{$height}) and (device-height: #{$width}) and (orientation: portrait) {
+    @content;
+  }
+}
+
+@mixin mq_iPad11Landscape {
+  $width: map-get($ss_iPad11, width);
+  $height: map-get($ss_iPad11, height);
+  @media (device-width: #{$width}) and (device-height: #{$height}) and (orientation: landscape) {
+    @content;
+  }
+}
+
 // iPad MQ (12.9")
 @mixin mq_iPad12_9 {
   $width: map-get($ss_iPad12_9, width);
   $height: map-get($ss_iPad12_9, height);
   @media (device-width: #{$height}) and (device-height: #{$width}) and (orientation: portrait),
          (device-width: #{$width}) and (device-height: #{$height}) and (orientation: landscape) {
+    @content;
+  }
+}
+
+@mixin mq_iPad12_9Portrait {
+  $width: map-get($ss_iPad12_9, width);
+  $height: map-get($ss_iPad12_9, height);
+  @media (device-width: #{$height}) and (device-height: #{$width}) and (orientation: portrait) {
+    @content;
+  }
+}
+
+@mixin mq_iPad12_9Landscape {
+  $width: map-get($ss_iPad12_9, width);
+  $height: map-get($ss_iPad12_9, height);
+  @media (device-width: #{$width}) and (device-height: #{$height}) and (orientation: landscape) {
     @content;
   }
 }
