--- a/CookieConsent.scss
+++ b/CookieConsent.scss
@@ -7,6 +7,7 @@
 	padding: 10px;
 	color: black;
 	z-index: 2000;
+	box-shadow: 0 1px 14px 6px rgb(0,0,0,.15);
 	
 	.necessary-only{
 		margin-right: 10px;
