--- a/modal.scss
+++ b/modal.scss
@@ -14,3 +14,20 @@
 .hidden-by-modal {
 	display: none !important;
 }
+
+.modal .modal-header .close {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: px_to_rem(16);
+
+	.custom-icon-content {
+		width: 100%;
+	}
+
+	.custom-icon {
+		width: 100%;
+		height: auto;
+	}
+
+}
