--- a/global-bootstrap.55.scss
+++ b/global-bootstrap.55.scss
@@ -306,23 +306,40 @@ $bootstrap_variants: (
                         opacity: 1;
                         color: $theme_modal_close_fg;
 
-                        > span {
-                            // hide Bootstrap close "x" text ...
-                            display: none;
+                        &:not(.custom-icon) {
+
+                            > span {
+                                // hide Bootstrap close "x" text ...
+                                display: none;
+                            }
+                            // ... and replace with icon
+                            &::after {
+                                content: "\f00d"; // fr-times
+                                font-family: "Font Awesome 5 Pro";
+                                font-weight: 300; // equivalent to .fal
+                                -moz-osx-font-smoothing: grayscale;
+                                -webkit-font-smoothing: antialiased;
+                                display: inline-block;
+                                font-style: normal;
+                                font-variant: normal;
+                                text-rendering: auto;
+                                line-height: 1;
+                                @include font_size($theme_modal_close_font_size);
+                            }
+
                         }
-                        // ... and replace with icon
-                        &::after {
-                            content: "\f00d"; // fr-times
-                            font-family: "Font Awesome 5 Pro";
-                            font-weight: 300; // equivalent to .fal
-                            -moz-osx-font-smoothing: grayscale;
-                            -webkit-font-smoothing: antialiased;
-                            display: inline-block;
-                            font-style: normal;
-                            font-variant: normal;
-                            text-rendering: auto;
-                            line-height: 1;
-                            @include font_size($theme_modal_close_font_size);
+
+                        &.custom-icon {
+
+                            > span:not(.custom-icon-content) {
+                                // hide Bootstrap close "x" text ...
+                                display: none;
+                            }
+
+                            &::after {
+                                content: none;
+                            }
+
                         }
                     }
                 }
