--- a/input.scss
+++ b/input.scss
@@ -39,3 +39,41 @@ input[type="checkbox"].form-control {
 	content: '*';
 	color: red;
 }
+
+.password-strength {
+	progress, progress::-webkit-progress-bar {
+		margin-top: 10px;
+		width: 100%;
+		height: 15px;
+		border: 0;
+		border-radius: 50px;
+	}
+
+	progress::-webkit-progress-value, progress::-moz-progress-bar {
+		border-radius: 50px;
+	}
+
+	&.none {
+		progress::-webkit-progress-value, progress::-moz-progress-bar {
+			background-color: #aaaaaa;
+		}
+	}
+
+	&.weak {
+		progress::-webkit-progress-value, progress::-moz-progress-bar {
+			background-color: #d62c0e;
+		}
+	}
+
+	&.medium {
+		progress::-webkit-progress-value, progress::-moz-progress-bar {
+			background-color: #d7860d;
+		}
+	}
+
+	&.strong {
+		progress::-webkit-progress-value, progress::-moz-progress-bar {
+			background-color: #6dd40f;
+		}
+	}
+}
