Validation errors are now more cleanly spaced by default

--- a/input.scss
+++ b/input.scss
@@ -4,7 +4,7 @@
 .validation-error{
 	color: var(--danger);
 	font-size: smaller;
-	margin-top: 4px;
+	margin: 0.5rem 0 1rem 0;
 }
 
 .clickable:hover{
