--- a/input.scss
+++ b/input.scss
@@ -38,42 +38,80 @@ input[type="checkbox"].form-control {
 .is-required-field::after{
 	content: '*';
 	color: var(--danger);
+	margin-inline-start: .25em;
 }
 
-.password-strength {
-	progress, progress::-webkit-progress-bar {
-		margin-top: 10px;
-		width: 100%;
-		height: 15px;
-		border: 0;
-		border-radius: 50px;
-	}
+// select controls without a selection that are also using floating labels render the "no selection" option by default, along with the label
+// this looks odd when viewed in context with a group of text input fields also using floating labels, so we add a "no-selection" class to the select;
+// this causes the select to show only the label until focussed or a selection is made
+.form-floating > .form-select:not(:focus) {
+    
+	&.no-selection {
+		color: transparent;
 
-	progress::-webkit-progress-value, progress::-moz-progress-bar {
-		border-radius: 50px;
-	}
-
-	&.none {
-		progress::-webkit-progress-value, progress::-moz-progress-bar {
-			background-color: #aaaaaa;
+		~ label {
+			opacity: 1;
+			transform: none;
 		}
+
+	}
+    
+}
+
+// bold form labels by default, except for floating labels used within fields
+.form-label {
+	font-weight: bold;
+}
+
+// reduce standard form font size
+.form-label,
+.form-control,
+.form-select {
+	font-size: 14px;
+}
+
+// reduce standard dropdown arrow size
+.form-select {
+    background-size: calc(.75em + .375rem);
+    background-position: right 1em top 50%;
+}
+
+.form-floating {
+
+	.form-label {
+		font-weight: normal;
+		// match height of input (default is 100%, which breaks when validation messages are displayed)
+		display: flex;
+		align-items: center;
+		height: calc(3.5rem + 2px);
+		line-height: 1.25;
 	}
 
-	&.weak {
-		progress::-webkit-progress-value, progress::-moz-progress-bar {
-			background-color: #d62c0e;
-		}
+}
+
+// used to get non-floating label fields to render at the same height as floating label fields
+// (use case is when everything uses floating labels, with the exception of a field that has a standalone label and explanatory text)
+// this keeps all input fields at a consistent height
+.form-floating-height {
+
+	.form-control {
+		height: calc(3.5rem + 2px);
+		line-height: 1.25;
 	}
 
-	&.medium {
-		progress::-webkit-progress-value, progress::-moz-progress-bar {
-			background-color: #d7860d;
-		}
-	}
+}
 
-	&.strong {
-		progress::-webkit-progress-value, progress::-moz-progress-bar {
-			background-color: #6dd40f;
-		}
-	}
+// ensure textareas have a sensible minimum height
+$textarea_minrows: 4;
+
+textarea.form-control {
+  min-height: calc((1.5em * #{$textarea_minrows}) + (.75rem + 2px));
+}
+
+textarea.form-control-sm {
+  min-height: calc((1.5em * #{$textarea_minrows}) + (.5rem + 2px));
+}
+
+textarea.form-control-lg {
+  min-height: calc((1.5em * #{$textarea_minrows}) + (1rem + 2px));
 }
