login form checkbox styling updated; info icon added to registration note; forgot password link aligned right

--- a/login-form.scss
+++ b/login-form.scss
@@ -1,7 +1,8 @@
-﻿.login-form{
+﻿.login-form {
 
-	.checkbox-label {
-	font-weight: 400;
+	.forgot-password-link {
+		display: block;
+		text-align: right;
 	}
 
 }
